# python_uv_template

./: README.md  pyproject.toml
.github/workflows/: ubuntu.yml
src/libtemp/: common.py  math.py
